<resources>
    <string name="app_name">Gate App-OyeSociety</string>

    <string name="Rupee">₹</string>
    <string name="rupee">\u20B9</string>
    <string name="linear_sectioned_recyclerview_vertical">Linear Sectioned RecyclerView (Vertical)</string>
    <string name="linear_sectioned_recyclerview_horizontal">Linear Sectioned RecyclerView (Horizontal)</string>
    <string name="grid_sectioned_recyclerview">Grid Sectioned RecyclerView</string>
    <string name="show_all">Show All</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_wrng">Something went Wrong</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="ledon">LED</string>
    <string name="ledoff">LED Off</string>
    <string name="sdktest">SDK Test</string>
    <string name="toggle_led">Toggle LED</string>
    <string name="match">Verify</string>
    <string name="register">Register</string>
    <string name="captureFingerPrint">Capture Fingerprint</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome!</string>
    <string name="cb_matched">Match</string>
    <string name="cb_scenabled">SC En</string>
    <string name="auto_on">Auto On</string>
    <string name="smart_capture">Smart Capture</string>
    <string name="smart_capture_on">Smart Cap ON</string>
    <string name="smart_capture_off">Smart Cap OFF</string>
    <string name="auto_on_enabled">AutoOn ON</string>
    <string name="auto_on_disabled">AutoOn OFF</string>
    <string name="capture_mode_n_on">Mode N ON</string>
    <string name="capture_mode_n_off">Mode N OFF</string>
    <string name="NFIQ_enabled">NFIQ ON</string>
    <string name="NFIQ_disabled">NFIQ OFF</string>
    <string name="usb_bulk_mode_64_on">USB Bulk 64 ON</string>
    <string name="usb_bulk_mode_64_off">USB Bulk 64 OFF</string>
    <string name="fingerprint_capture_image">Fingerprint capture image</string>
    <string name="fingerprint_register_image">Fingerprint register image</string>
    <string name="fingerprint_verify_image">Fingerprint verify image</string>
    <string name="secugen_device_image">SecuGen device image</string>
    <string name="read_serial_number">Read S/N</string>
    <string name="set_brightness_0">Set Brightness 0</string>
    <string name="set_brightness_100">Set Brightness 100</string>
    <string name="log">Log</string>

    <string name="textvalidtill">Valid till:</string>
    <string name="textversion">Version:</string>
    <string name="textstaff">Staff</string>
    <string name="textvehiclle">Vehicle</string>
    <string name="textdelivery">Delivery</string>
    <string name="textlanguagesettings">Language Settings</string>
    <string name="textassociationname">Association Name</string>
    <string name="textexit">Exit</string>
    <string name="textcapturephoto">Capture Photo</string>
    <string name="textnext">Next</string>
    <string name="textupload">Upload</string>
    <string name="textloginscreen">Login Screen</string>
    <string name="textsendotp">Send OTP</string>
    <string name="textphonenumber">Phone Number</string>
    <string name="textskip">Skip</string>
    <string name="textcallmobilenumber">Call Mobile Number</string>
    <string name="textnameentryscreen">Name Entry Screen</string>
    <string name="textentername">Enter Name</string>
    <string name="textselectdeliveryfrom">Select Delivery From</string>
    <string name="textname">Name</string>
    <string name="textmobile">Mobile</string>
    <string name="textfor">For:</string>
    <string name="textfrom">From:</string>
    <string name="textperson">Persons</string>
    <string name="textdone">Done</string>
    <string name="textadd">Add</string>
    <string name="textsearchbyname">Search by Name</string>
    <string name="textsearchflat">Select Flat/Unit</string>
    <string name="textselectlanguage">Select Language</string>
    <string name="textenglish">English</string>
    <string name="texthindi">Hindi</string>
    <string name="textshowall">Show All</string>
    <string name="texteditvn">Edit the vechical number</string>
    <string name="textother">OTHER</string>
    <string name="textguest">Guest</string>
    <string name="textlookingforqr">Looking for Guest QR Code</string>
    <string name="textnoqrcode">Without qr code</string>
    <string name="textpatrollingscreen">Patrolling Screen</string>
    <string name="textstart">Start</string>
    <string name="textend">End</string>
    <string name="textscancheckpoint">Scan Checkpoint</string>
    <string name="textstaffdesignationselection">Staff Designation Selection</string>
    <string name="textstringentry">Make Entry</string>
    <string name="textbiometric">BioMetric</string>
    <string name="texttakepersonphoto">Take Person Photo</string>
    <string name="textretakepersonphoto">ReTake Person Photo</string>
    <string name="texttakeproductphoto">Take Product Photos</string>
    <string name="textpersonanditemphoto">Person and Product Photo Screen</string>
    <string name="texteditvehicleno">Edit the Vehicle number</string>
    <string name="textpatrolling">Patrolling</string>
    <string name="textverify">Verify</string>

    <string name="textto">To:</string>

    <string name="textdesignation">Designation:</string>

    <string name="textpurpose">purpose of visit</string>
    <string name="textgivemissedcall">Get Missed Call on:</string>
    <string name="textidcard">ID Card for:</string>
    <string name="textenterpurpose">Enter Purpose</string>
    <string name="textpersonphotoscreen">Person\'s Photo Screen</string>
    <string name="textemergency">Emergency</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="textvisiting">Visiting</string>
    <string name="textmissedcallby">Get Missed Call by: </string>
    <string name="textnodata">No Data</string>
    <string name="textnobalance">No Balance</string>
    <string name="textcancel">Cancel</string>
    <string name="textselectdob">Select DOB</string>
    <string name="textupdate">Update</string>
    <string name="textstaffdetails">Staff Details</string>
    <string name="btn1">
        Cancel
    </string>
    <string name="btn2">
        Update
    </string>
    <string name="textstaffedit">
        Staff Edit
    </string>
    <string name="capture">Capture</string>
    <string name="init">Initialize</string>
    <string name="units_list_title">Unit List</string>
    <string name="units_selection_title">Select Units</string>
    <string name="blocks_selection_title">Select Blocks</string>
    <string name="tvdynamicsearch">Dynamic Search</string>
    <string name="tvresident">Resident</string>
    <string name="tvmanualentry"> Full Manual Entry</string>
    <string name="tvverifyotp">Verify OTP</string>


    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_dwell">Inside Location</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="valid">valid</string>
    <string name="invalid">invalid</string>
    <string name="scan_res_id_here">Scan Resident ID Here</string>

    <string name="textzomato">Zomato</string>
    <string name="textswiggy">Swiggy</string>
    <string name="textfoodpanda">FoodPanda</string>
    <string name="textubereats">Uber Eats</string>
    <string name="textdominos">Dominos</string>
    <string name="textbluedart">BlueDart</string>
    <string name="textdtdc">DTDC</string>
    <string name="textjabong">Jabong</string>
    <string name="textflipkart">Flipkart</string>
    <string name="textamazon">Amazon</string>
    <string name="textbigbasket">BigBasket</string>
    <string name="textgrofers">Grofers</string>
    <string name="textgodrej">Godrej</string>
    <string name="textcarpenter">Carpenter</string>
    <string name="textplumber">Plumber</string>
    <string name="textelectrician">Electrician</string>
    <string name="textola">OLA</string>
    <string name="textuber">Uber</string>
    <string name="textmeru">Meru</string>
    <string name="textgascylinde">Gas Cylinder</string>
    <string name="textothers">Others</string>
    <string name="textfedex">Fedex</string>

    <string-array name="vendor_list">
        <item>Zomato</item>
        <item>Swiggy</item>
        <item>FoodPanda</item>
        <item>Uber Eats</item>
        <item>Dominos</item>
        <item>BlueDart</item>
        <item>DTDC</item>
        <item>Jabong</item>
        <item>Flipkart</item>
        <item>Amazon</item>
        <item>BigBasket</item>
        <item>Grofers</item>
        <item>Godrej</item>
        <item>Carpenter</item>
        <item>Plumber</item>
        <item>Electrician</item>
        <item>OLA</item>
        <item>Uber</item>
        <item>Meru</item>
        <item>Gas Cylinder</item>
        <item>Others</item>
        <item>Fedex</item>

    </string-array>

    <string name="gate_channel">GATE_NOTIF_CHANNEL</string>
    <string name="textkidexit">Kid Exit</string>
    <string name="tv_change">Change</string>
</resources>
