<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textcapturephoto">
        </Button>
        <Button android:id="@+id/buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/textnext">
        </Button>
    </RelativeLayout>

    <ImageView android:id="@+id/imageView1"
               android:layout_height="200dp"
               android:src="@drawable/usericon"
               android:layout_width="match_parent">
    </ImageView>
    <Button android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/textupload">
    </Button>

</LinearLayout>