<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >

       <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:id="@+id/rl_header"
                        android:background="@color/white">

                <ImageView android:layout_width="150dp"
                           android:layout_height="40dp"
                           android:id="@+id/rl_header1"
                           android:layout_margin="@dimen/_2sdp"
                           android:layout_centerHorizontal="true"
                           android:src="@drawable/oyespace_toolbar"/>

        </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_below="@+id/rl_header"
                        android:layout_height="2dp"
                        android:background="@color/end_gradient">

        </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="3"
                  android:id="@+id/lyt"
                  android:layout_below="@+id/view1"
                  android:orientation="horizontal">

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/txt_device_name"
                  android:textColor="@color/black"
                  android:layout_weight="1"
                  android:textStyle="bold"
                  android:textSize="10sp"
                  android:padding="2dp"
                  android:text="Deeee"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/txt_assn_name"
                  android:textColor="@color/black"
                  android:layout_weight="1"
                  android:textStyle="bold"
                  android:textSize="12sp"
                  android:padding="2dp"
                  android:text="Association Name"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/txt_gate_name"
                  android:textColor="@color/black"
                  android:textStyle="bold"
                  android:layout_weight="1"

                  android:textSize="12sp"
                  android:padding="2dp"
                  android:text="Gate Name"/>
    </LinearLayout>


    <RelativeLayout
            android:id="@+id/lyt2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/lyt"
            android:background="@color/end_gradient">

    </RelativeLayout>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/rl_header"
                  android:textColor="@color/black"
                  android:layout_margin="5dp"
                  android:text="@string/textpatrollingscreen"/>

    <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_alignParentRight="true"
            android:padding="@dimen/_2sdp"
            android:onClick="onClick"
            android:text="@string/textstart"
            android:textColor="@android:color/white"
            android:background="@drawable/square"
            android:textSize="@dimen/_14sdp" />

    <Button
            android:id="@+id/buttonEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_alignParentRight="true"
            android:padding="@dimen/_2sdp"
            android:onClick="onClick"
            android:text="@string/textend"
            android:textColor="@android:color/white"
            android:background="@drawable/square"
            android:textSize="@dimen/_14sdp" />
    <Button
            android:id="@+id/buttonCheckpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_alignParentRight="true"
            android:padding="@dimen/_20sdp"
            android:onClick="onClick"
            android:text="@string/textscancheckpoint"
            android:textColor="@android:color/white"
            android:background="@drawable/square"
            android:textSize="@dimen/_14sdp" />

</LinearLayout>