<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:keepScreenOn="true"
        android:layout_height="match_parent"
        android:background="@drawable/white_rounded_rectangle_dbdbdb_border2"

        tools:context=".MainActivity">

    <RelativeLayout android:layout_width="match_parent"
            android:id="@+id/rl_header"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="2dp">

        <ImageView android:layout_width="150dp"
                android:id="@+id/img_logo"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/_2sdp"
                android:src="@drawable/oyespace_toolbar" />

        <Button
                android:id="@+id/buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/_2sdp"
                android:onClick="onClick"
                android:text="@string/textnext"
                android:textColor="@android:color/white"
                android:background="@drawable/square"
                android:textSize="@dimen/_10sdp" android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp" android:layout_marginBottom="@dimen/_2sdp"/>

        <Button
                android:id="@+id/buttonSkip"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/buttonNext"
                android:padding="@dimen/_2sdp"
                android:onClick="onClick"
                android:text="@string/textskip"
                android:textColor="@color/orange"
                android:background="@android:color/transparent"
                android:textSize="@dimen/_10sdp" />
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_below="@+id/rl_header"
            android:layout_height="2dp"
            android:background="@color/orange">

    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
            android:id="@+id/lyt"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:orientation="horizontal"
            android:weightSum="3">

        <TextView android:layout_width="0dp"
                android:id="@+id/txt_device_name"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="Deeee"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold" />

        <TextView android:layout_width="0dp"
                android:id="@+id/txt_assn_name"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="Association Name"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        <TextView android:layout_width="0dp"
                android:id="@+id/txt_gate_name"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="Gate Name"

                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
    </LinearLayout>


    <RelativeLayout
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/lyt"
            android:background="@color/orange">

    </RelativeLayout>

    <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view2"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:visibility="invisible"
            android:text="@string/textcallmobilenumber"/>


    <TextView
            android:id="@+id/tv_guardnumber"
            android:layout_below="@+id/tv"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:paddingLeft="15dp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/lytt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_weight="1">

            <com.hbb20.CountryCodePicker
                    app:ccp_hintExampleNumber="true"
                    android:id="@+id/country_code_picker1"
                    android:clickable="false"
                    android:focusable="true"
                    android:background="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"></com.hbb20.CountryCodePicker>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:hint="Mobile Number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:visibility="gone" />


            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:layout_weight="1">
                <!--<Button
                        android:id="@+id/btn_mic"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="2dp"

                        android:drawableLeft="@drawable/microphone_640"
                />-->
                <ImageButton
                        android:visibility="gone"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:src="@drawable/microphone_640"

                        android:background="@android:color/transparent"
                        android:scaleType="fitXY"

                        android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/layout_login_phone_no"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/white_rounded_rectangle_dbdbdb_border2"
                    android:orientation="vertical">


                <LinearLayout
                        android:id="@+id/phone_number_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/et_areacode"
                            style="@style/EditTextCustomHolo"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:visibility="gone"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="@dimen/horizontal_padding_micro"
                            android:paddingRight="@dimen/horizontal_padding_micro"
                            android:textAlignment="center"
                            android:text="+91"
                            android:textColor="@color/GBL1"
                            android:textSize="@dimen/font_size_xmedium" />

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical">

                        <com.hbb20.CountryCodePicker
                                android:id="@+id/country_code_picker"
                                app:ccp_hintExampleNumber="true"
                                android:clickable="false"
                                android:focusable="true"
                                android:visibility="gone"
                                android:background="@color/white"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"></com.hbb20.CountryCodePicker>
                    </LinearLayout>

                    <TextView
                            android:id="@+id/Ed_phoneNum"
                            style="@style/EditTextCustomHolo"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:visibility="gone"
                            android:layout_height="wrap_content"
                            android:digits="\ 0123456789"
                            android:gravity="center_vertical"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/textphonenumber"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:editable="false"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:singleLine="true"
                            android:textColor="@color/GBL1"
                            android:textColorHint="@color/GBL1"
                            android:textCursorDrawable="@null"
                            android:textSize="16dp" />

                    <TextView
                            android:id="@+id/textview"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:hint=""
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center_vertical"
                            style="@style/EditTextCustomHolo"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:singleLine="true"
                            android:textColor="@color/GBL1"
                            android:textColorHint="@color/GBL1"
                            android:textCursorDrawable="@null"
                            android:textSize="18dp" />

                    <Button
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_60sdp"
                            android:id="@+id/btn_mic"
                            android:visibility="invisible"
                            android:layout_margin="@dimen/horizontal_padding_small"
                            android:background="@drawable/microphone_640"
                            android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <Button android:id="@+id/Btn_SendOtp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/textsendotp"
                android:textAllCaps="true"
                android:visibility="invisible"
                android:textSize="26dp"
                android:onClick="onClick"
                android:background="@color/white"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />


    </LinearLayout>

    <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/timertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textmissedcallby"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_below="@+id/lytt"
            android:paddingLeft="15dp"
            android:textStyle="bold"
            android:textColor="@color/orange" />

    <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lytt"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text=""
            android:layout_toRightOf="@+id/timertext" />

    <Button
            android:id="@+id/btn_nobalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timer"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:padding="15dp"
            android:visibility="visible"
            android:background="@drawable/square"
            android:onClick="onClick"
            android:layout_centerInParent="true"
            android:text="@string/textnobalance"
            android:textColor="@color/white" />

</RelativeLayout>
</layout>